--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/forms": "^0.5.6",
     "@vitejs/plugin-vue": "^4.4.0",
     "autoprefixer": "^10.4.16",
+    "daisyui": "^3.9.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.11"
